--- a/src/chrome/skin/mac/clippingsMgr.css
+++ b/src/chrome/skin/mac/clippingsMgr.css
@@ -135,7 +135,7 @@ spacer.toolbar-separator {
   width: 40px;
 }
 
-toolbarbutton {
+toolbarbutton:not(#placeholder-presets) {
   list-style-image: url("chrome://clippings/skin/images/clippingsMgrToolbar.png");
   -moz-box-orient: vertical;
   min-width: 52px;
@@ -145,6 +145,10 @@ toolbarbutton {
  * default theme. */
 toolbarbutton .toolbarbutton-icon {
   -moz-margin-end: 0px;
+}
+
+#insert-placeholder-bar > toolbarbutton .toolbarbutton-icon {
+  -moz-margin-end: 4px;
 }
 
 #new-clipping {
@@ -314,6 +318,30 @@ toolbarbutton .toolbarbutton-icon {
   padding: 6px;
 }
 
+/* Insert Placeholder toolbar */
+#placeholder-custom {
+  -moz-image-region: rect(0px, 272px, 16px, 256px);
+}
+
+#placeholder-custom:hover {
+  -moz-image-region: rect(16px, 272px, 32px, 256px);
+}
+
+#placeholder-custom:active {
+  -moz-image-region: rect(32px, 272px, 48px, 256px);
+}
+
+#placeholder-autoincrement {
+  -moz-image-region: rect(0px, 288px, 16px, 272px);
+}
+
+#placeholder-autoincrement:hover {
+  -moz-image-region: rect(16px, 288px, 32px, 272px);
+}
+
+#placeholder-autoincrement:active {
+  -moz-image-region: rect(32px, 288px, 48px, 272px);
+}
 
 /* Color-coded clippings */
 #clipping-label-menupopup menuitem,
